<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="BeltConveyor" Id="{57da7b01-d526-4fb2-a93c-b0a6d577875c}">
    <Declaration><![CDATA[{attribute 'OPC.UA.DA' := '1'}
TYPE BeltConveyor :
STRUCT
	
	(* Cintas comunes correspondientes al proceso de Sorting, ordenadas por aparición*)
	bSortingCintaInicial		: BOOL;
	bSortingCintaEntrada		: BOOL;
	bSortingCintaDistribucion	: BOOL;
	
	(* Cintas PARA PIEZAS AZULES, ordenadas por aparición*)
	bCintaAzul1 	: BOOL;
	bCintaAzul2		: BOOL;
	
	(* Cintas PARA PIEZAS VERDES, ordenadas por aparición*)
	bCintaVerde1 	: BOOL;
	bCintaVerde2	: BOOL;

	(* Cintas PARA PIEZAS METAL, ordenadas por aparición*)
	bCintaMetal1 	: BOOL;
	bCintaMetal2	: BOOL;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>