<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="PickandPlace" Id="{312bfef8-c533-4911-a49f-969be5116b13}">
    <Declaration><![CDATA[{attribute 'OPC.UA.DA' := '1'}
TYPE PickandPlace :
STRUCT
	
	(* Outputs del Pick and Place *)
 	bMovementZ 	: BOOL;
 	bMovementX 	: BOOL;
	bRotateCW 	: BOOL;
	bRotateCCW 	: BOOL;
	bGripperCW 	: BOOL;
	bGripperCCW : BOOL;
	bGrab 		: BOOL;
	
	(* Inputs del Pick and Place *)
	bMovingX 			: BOOL;
	bMovingZ 			: BOOL;
	bRotating 			: BOOL;
	bGripperRotating	: BOOL;
	bDetected 			: BOOL;

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>