<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_Almacen" Id="{11c961f0-2fd0-4647-939e-79aa2ce98cb5}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
	(* Sensores y actuadores asociados al ciclo del Almacén*)
	
	{attribute 'OPC.UA.DA.StructuredType' := '1'}
	sStackCraneRack: StrackerCraneRack;
	
	{attribute 'OPC.UA.DA' := '1'}
	bDifusseSensorAlmacen:BOOL;
	{attribute 'OPC.UA.DA' := '1'}
	iVisionSensorAlmacen: DINT;
	{attribute 'OPC.UA.DA' := '1'}
	bRRflexSensorAlmacen:BOOL;
	
	{attribute 'OPC.UA.DA' := '1'}
	bLoadingConveyor:BOOL;
	
	(* Almacenamiento de datos de las diferentes posiciones (no es necesario que sea una GVL) *)
	aAlmacen: ARRAY[1..54] OF COLOR  :=[54(0)];
	

	(* Memoria del color solicitado (no es necesario que sea una GVL) *)
	iSolicitudColor : INT;
	
	(* Botones de activación, paro y seta y elementos asociados al panel del Almacén *)
	
	{attribute 'OPC.UA.DA' := '1'}
	Sacar: BOOL;
	{attribute 'OPC.UA.DA' := '1'}
	bReset: BOOL;
	{attribute 'OPC.UA.DA' := '1'}
	bSetaEmergencia: BOOL;
	
	{attribute 'OPC.UA.DA.StructuredType' := '1'}
	sSelector : Selector;
	
	{attribute 'OPC.UA.DA' := '1'}
	iDisplay : INT;
	{attribute 'OPC.UA.DA' := '1'}
	LedAzul: BOOL;
	{attribute 'OPC.UA.DA' := '1'}
	LedVerde: BOOL;
	{attribute 'OPC.UA.DA' := '1'}
	LedMetal: BOOL;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>