<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_StackBox" Id="{a93657cd-53b4-467b-94c8-694495fe70d0}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
	(* Variables correspondientes a la Línea Azul*)
	
	{attribute 'OPC.UA.DA.StructuredType' := '1'}
	sPickAndPlaceA	: PickAndPlace;
	{attribute 'OPC.UA.DA.StructuredType' := '1'}
	sPosLeftBarA	: PositioningLeftBar;
	{attribute 'OPC.UA.DA' := '1'}
	bStopBladeA1: BOOL;
	{attribute 'OPC.UA.DA' := '1'}
	bStopBladeA2: BOOL := TRUE;
	
	{attribute 'OPC.UA.DA' := '1'}
	bRReflectiveSensorA1 	: BOOL	:= TRUE;
	{attribute 'OPC.UA.DA' := '1'}
	bRReflectiveSensorA2 	: BOOL	:= TRUE;
	{attribute 'OPC.UA.DA' := '1'}
	bRReflectiveSensorA3	: BOOL	:= TRUE;
	{attribute 'OPC.UA.DA' := '1'}
	bDiffuseSensorPyPA		: BOOL	:= FALSE;
	

	
	(* Variables correspondientes a la Línea Verde*)
	
	{attribute 'OPC.UA.DA.StructuredType' := '1'}
	sPickAndPlaceV	: PickAndPlace;
	{attribute 'OPC.UA.DA.StructuredType' := '1'}
	sPosLeftBarV	: PositioningLeftBar;
	{attribute 'OPC.UA.DA' := '1'}
	bStopBladeV1: BOOL;
	{attribute 'OPC.UA.DA' := '1'}
	bStopBladeV2: BOOL := TRUE;
	
	
	{attribute 'OPC.UA.DA' := '1'}
	bRReflectiveSensorV1 : BOOL		:= TRUE;
	{attribute 'OPC.UA.DA' := '1'}
	bRReflectiveSensorV2 : BOOL		:= TRUE;
	{attribute 'OPC.UA.DA' := '1'}	
	bRReflectiveSensorV3 : BOOL		:= TRUE;
	{attribute 'OPC.UA.DA' := '1'}	
	bDiffuseSensorPyPV	 : BOOL		:= FALSE;
	
	
	
	(* Variables correspondientes a la Línea Metal*)
	
	{attribute 'OPC.UA.DA.StructuredType' := '1'}
	sPickAndPlaceM	: PickAndPlace;
	{attribute 'OPC.UA.DA.StructuredType' := '1'}
	sPosLeftBarM	: PositioningLeftBar;
	{attribute 'OPC.UA.DA' := '1'}
	bStopBladeM1: BOOL;
	{attribute 'OPC.UA.DA' := '1'}
	bStopBladeM2: BOOL := TRUE;
	
	{attribute 'OPC.UA.DA' := '1'}
	bRReflectiveSensorM1 : BOOL		:= TRUE;
	{attribute 'OPC.UA.DA' := '1'}
	bRReflectiveSensorM2 : BOOL		:= TRUE;
	{attribute 'OPC.UA.DA' := '1'}
	bRReflectiveSensorM3 : BOOL		:= TRUE;
	{attribute 'OPC.UA.DA' := '1'}
	bDiffuseSensorPyPM	 : BOOL		:= FALSE;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>