<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="PRG_SetaEmergencia" Id="{673bb672-76e7-47b1-8f3a-f753faa32ba6}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_SetaEmergencia
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(* GVL GENERAL *)

GVL_General.sBeltConveyor.bSortingCintaDistribucion := FALSE;
GVL_General.sBeltConveyor.bSortingCintaEntrada := FALSE;
GVL_General.sBeltConveyor.bSortingCintaInicial := FALSE;


GVL_General.bStopBlade1 := FALSE;


GVL_General.sBeltConveyor.bCintaAzul1 := FALSE;
GVL_General.sBeltConveyor.bCintaAzul2 := FALSE;

GVL_General.sBeltConveyor.bCintaMetal1 := FALSE;
GVL_General.sBeltConveyor.bCintaMetal2 := FALSE;

GVL_General.sBeltConveyor.bCintaVerde1 := FALSE;
GVL_General.sBeltConveyor.bCintaVerde2 := FALSE;


(* GVL SORTING *)

GVL_Sorting.sPusherA.Pusher := FALSE;
GVL_Sorting.sPusherV.Pusher := FALSE;
GVL_Sorting.sPusherM.Pusher := FALSE;


(* GVL STACKBOX *)

GVL_StackBox.bStopBladeA1 := FALSE;
GVL_StackBox.bStopBladeA2 := FALSE;

GVL_StackBox.bStopBladeV1 := FALSE;
GVL_StackBox.bStopBladeV2 := FALSE;

GVL_StackBox.bStopBladeM1 := FALSE;
GVL_StackBox.bStopBladeM2 := FALSE;

GVL_StackBox.sPickAndPlaceA.bGrab := FALSE;
GVL_StackBox.sPickAndPlaceA.bGripperCCW := FALSE;
GVL_StackBox.sPickAndPlaceA.bGripperCW := FALSE;
GVL_StackBox.sPickAndPlaceA.bMovementX := FALSE;
GVL_StackBox.sPickAndPlaceA.bMovementZ := FALSE;
GVL_StackBox.sPickAndPlaceA.bRotateCCW := FALSE;
GVL_StackBox.sPickAndPlaceA.bRotateCW := FALSE;

(* GVL PROCESOPALLET*)

GVL_ProcesoPallet.sTurnTable.RollNegativo := FALSE;
GVL_ProcesoPallet.sTurnTable.RollPositivo := FALSE;
GVL_ProcesoPallet.sTurnTable.Turn := FALSE;
GVL_ProcesoPallet.sRollerConveyor.bCurvedRollerAlmacen:= FALSE;
GVL_ProcesoPallet.sRollerConveyor.bCurvedRollerAzul1 := FALSE;
GVL_ProcesoPallet.sRollerConveyor.bCurvedRollerMetal1 := FALSE;
GVL_ProcesoPallet.sRollerConveyor.bRollerAlmacen1 := FALSE;
GVL_ProcesoPallet.sRollerConveyor.bRollerAlmacen2 := FALSE;
GVL_ProcesoPallet.sRollerConveyor.bRollerAlmacen3 := FALSE;
GVL_ProcesoPallet.sRollerConveyor.bRollerAlmacen4 := FALSE;
GVL_ProcesoPallet.sRollerConveyor.bRollerAzul1 := FALSE;
GVL_ProcesoPallet.sRollerConveyor.bRollerVerde1 := FALSE;
GVL_ProcesoPallet.sRollerConveyor.bRollerMetal1 := FALSE;


(*GVL ALMACEN *)

GVL_Almacen.bLoadingConveyor := FALSE;
GVL_Almacen.sStackCraneRack.Left := FALSE;
GVL_Almacen.sStackCraneRack.Lift := FALSE;
GVL_Almacen.sStackCraneRack.Right := FALSE;






]]></ST>
    </Implementation>
    <LineIds Name="PRG_SetaEmergencia">
      <LineId Id="5" Count="0" />
      <LineId Id="26" Count="2" />
      <LineId Id="11" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="6" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="25" Count="0" />
      <LineId Id="12" Count="1" />
      <LineId Id="30" Count="0" />
      <LineId Id="14" Count="1" />
      <LineId Id="31" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="35" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="36" Count="1" />
      <LineId Id="19" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="49" Count="1" />
      <LineId Id="39" Count="2" />
      <LineId Id="53" Count="0" />
      <LineId Id="45" Count="1" />
      <LineId Id="54" Count="0" />
      <LineId Id="47" Count="1" />
      <LineId Id="55" Count="2" />
      <LineId Id="60" Count="0" />
      <LineId Id="58" Count="1" />
      <LineId Id="42" Count="0" />
      <LineId Id="75" Count="0" />
      <LineId Id="44" Count="0" />
      <LineId Id="61" Count="0" />
      <LineId Id="76" Count="0" />
      <LineId Id="78" Count="1" />
      <LineId Id="62" Count="0" />
      <LineId Id="81" Count="8" />
      <LineId Id="91" Count="1" />
      <LineId Id="90" Count="0" />
      <LineId Id="94" Count="0" />
      <LineId Id="93" Count="0" />
      <LineId Id="95" Count="2" />
      <LineId Id="63" Count="5" />
      <LineId Id="16" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>